# src/openapi.rs
@@ -45,6 +45,7 @@
         crate::dto::DeviceSummary,
         crate::dto::DeviceDetail,
         crate::dto::DeviceConfiguration,
+        crate::dto::DeviceColor,
         crate::dto::DeviceSource,
         crate::dto::SpecValue,
         crate::dto::Pagination,
@@ -56,6 +57,7 @@
         crate::dto::AliasInput,
         crate::dto::SourceInput,
         crate::dto::ConfigurationInput,
+        crate::dto::ColorInput,
         crate::dto::AliasDetail,
         crate::dto::RouteMissCreateRequest,
         crate::dto::RouteMissSummary,
